Fix beach page ad alignment

--- a/src/pages/Beach/[[...slug]]/styles.module.css
+++ b/src/pages/Beach/[[...slug]]/styles.module.css
@@ -17,6 +17,10 @@
   margin-left: 16px;
 }
 
+.adTop {
+  margin-top: 16px;
+}
+
 @media (max-width: 968px) {
   .adTop {
     display: none;
